--- a/index.css
+++ b/index.css
@@ -71,7 +71,8 @@ main{
 }
 img{
   width: 100%;
-  background-size: cover;
+object-fit: cover;
+  height: 200px;
   display: flex;
   border-radius: 7px;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
@@ -154,7 +155,7 @@ footer{
   margin-top: 40px;
 }
 
-@media (min-width: 500px) {
+@media (min-width: 600px) {
   .card{
     width: 300px;
   }
