perbaikan di button next dan prev

--- a/index.css
+++ b/index.css
@@ -96,9 +96,10 @@ object-fit: cover;
   display: flex;
   justify-content: space-between;
   margin: 18px 0;
-  gap: 20px;
-  padding: 10px;
+  gap: 10px;
+  padding: 7px;
   margin-bottom: 80px;
+  align-items: center;
 }
 .next{
   font-weight: bold;
@@ -121,6 +122,16 @@ object-fit: cover;
   border: none;
   box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 }
+
+.of{
+  font-size: 18px;
+}
+
+.numberPage, 
+.numberOfPage{
+  font-size: 17px;
+}
+
 
 .hidden{
   display: none;
